--- a/VirtoCommerce.Webshop/Styles/webshop.css
+++ b/VirtoCommerce.Webshop/Styles/webshop.css
@@ -41,3 +41,176 @@
     .ws-main-menu>li>a.ws-selected {
         color: #148f77;
     }
+
+.ws-product-list {
+    list-style-position: inside;
+    margin: 0 0 20px;
+    overflow: visible !important;
+    padding: 0;
+}
+    .ws-product-list::after {
+        clear: both;
+        content: "";
+        display: table;
+    }
+    .ws-product-list::before {
+        content: "";
+        display: block;
+    }
+    .ws-product-list li {
+        float: left;
+        line-height: 20px;
+        list-style: none;
+        margin-bottom: 30px;
+        margin-left: 30px;
+        width: 270px;
+    }
+    .ws-product-list a {
+        color: #1abc9c;
+        display: block;
+        font-size: 14px;
+        position: relative;
+        text-decoration: none;
+        z-index: 20;
+        -webkit-box-shadow: 0 1px 2px rgba(71, 73, 72, 0.19999999999999996);
+        -moz-box-shadow: 0 1px 2px rgba(71, 73, 72, 0.19999999999999996);
+        box-shadow: 0 1px 2px rgba(71, 73, 72, 0.19999999999999996);
+        -webkit-transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out;
+        -moz-transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out;
+        -o-transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out;
+        transition: color 200ms ease-in-out, background-color 200ms ease-in-out, border-color 200ms ease-in-out
+    }
+        .ws-product-list a .ws-image {
+            position: relative;
+        }
+            .ws-product-list a .ws-image img {
+                border: 0;
+                display: block;
+                height: auto;
+                max-width: 100%;
+                vertical-align: middle;
+                width: 100%;
+            }
+            .ws-product-list a .ws-image .ws-badge-sale {
+                background-color: #1abc9c;
+                font-size: 12px;
+                line-height: 12px;
+                padding: 4px 8px;
+                position: absolute;
+                right: -10px;
+                text-transform: uppercase;
+                top: 40px;
+                -webkit-background-clip: padding-box;
+                -moz-background-clip: padding-box;
+                background-clip: padding-box;
+                -webkit-border-radius: 2px 2px 0 2px;
+                -moz-border-radius: 2px 2px 0 2px;
+                border-radius: 2px 2px 0 2px;
+            }
+                .ws-product-list a .ws-image .ws-badge-sale::after {
+                    border: 10px solid;
+                    border-color: #0e6252 transparent transparent transparent;
+                    bottom: -20px;
+                    content: "";
+                    display: block;
+                    height: 0;
+                    position: absolute;
+                    right: 0;
+                    width: 0;
+                    z-index: -10;
+                }
+        .ws-product-list a .ws-title {
+            background-color: #fff;
+            padding: 20px;
+            position: relative;
+        }
+            .ws-product-list a .ws-title::before {
+                background-color: #fff;
+                content: "";
+                display: block;
+                height: 16px;
+                left: 20px;
+                position: absolute;
+                top: -8px;
+                width: 16px;
+                -webkit-transform: rotate(45deg);
+                -moz-transform: rotate(45deg);
+                -o-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
+            }
+        .ws-product-list a .ws-title .ws-prices {
+            float: right;
+            height: 20px;
+            line-height: 20px;
+            margin-left: 20px;
+            text-align: right;
+        }
+            .ws-product-list a .ws-title .ws-prices .ws-base {
+                color: #c7c8c8;
+                font-size: 14px;
+                font-weight: 400;
+            }
+                .ws-product-list a .ws-title .ws-prices .ws-base .ws-amount {
+                    font-size: 11px;
+                }
+            .ws-product-list a .ws-title .ws-prices .ws-price {
+                color: #1abc9c;
+                font-size: 14px;
+                font-weight: 600;
+            }
+        .ws-product-list a .ws-title h3 {
+            color:  rgb(71, 73, 72);
+            font-size: 14px;
+            font-weight: 700;
+            letter-spacing: -0.5px;
+            line-height: 20px;
+            margin: 0;
+        }
+.ws-badge {
+    background-color: #999;
+    color: #fff;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 14px;
+    padding: 2px 9px 0;
+    text-shadow: 0px -1px 0px rgba(0,0,0,0.25);
+    vertical-align: baseline;
+    white-space: nowrap;
+    -webkit-border-radius: 9px;
+    -moz-border-radius: 9px;
+    border-radius: 9px;
+}
+
+.ws-mini-cart {
+    padding: 20px 0;
+}
+    .ws-mini-cart a {
+        background: url("cart.png") no-repeat left center;
+        display: block;
+        float: right;
+        height: 40px;
+        line-height: 40px;
+        position: relative;
+        width: 40px;
+    }
+        .ws-mini-cart a>span {
+            background-color: #1abc9c;
+            color: #fff;
+            display: inline-block;
+            font-size: 11px;
+            height: 20px;
+            line-height: 20px;
+            position: absolute;
+            right: 0;
+            text-align:center;
+            top: 0;
+            width: 20px;
+            -webkit-background-clip: padding-box;
+            -moz-background-clip: padding-box;
+            background-clip: padding-box;
+            -webkit-border-radius: 12px;
+            -mnoz-border-rdius: 12px;
+            border-radius: 12px;
+        }
