--- a/VirtoCommerce.Webshop/Views/Parts/ShoppingCartPreview.cshtml
+++ b/VirtoCommerce.Webshop/Views/Parts/ShoppingCartPreview.cshtml
@@ -1,12 +1,8 @@
-﻿@{
-    Style.Require("Webshop");
-}
-
-<div class="ws-mini-cart">
-    <a href="@Href("~/Cart")" title="@T("Cart")">
-        @if (Model.LineItemCount > 0)
+﻿<div class="ws-mini-cart">
+    <a href="@Href("~/Cart")" title="@T("Go to cart")">
+        @if (Model.ShoppingCart != null && Model.ShoppingCart.LineItemCount > 0)
         {
-            <span>@Model.LineItemCount</span>
+            <span>@Model.ShoppingCart.LineItemCount</span>
         }
     </a>
 </div>
