Add untracked files

--- a/VirtoCommerce.Webshop/Views/Parts/Product.cshtml
+++ b/VirtoCommerce.Webshop/Views/Parts/Product.cshtml
@@ -3,7 +3,7 @@
         <div class="ws-primary">
             <img alt="@Model.Product.Name" src="@Model.Product.ImageUrl" />
         </div>
-        @if (Model.Product.Images.Count > 0)
+        @*@if (Model.Product.Images.Count > 0)
         {
             <div class="ws-thumbs">
                 <ul class="ws-thumbs-list">
@@ -17,7 +17,7 @@
                     }
                 </ul>
             </div>
-        }
+        }*@
     </div>
 </div>
 <div class="ws-product-content">
